--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
-title                    : "Skyler Wu"
+title                    : "Alex Rojas"
 title_separator          : "-"
-name                     : &name "Skyler Wu"
-description              : &description "Skyler Wu's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://skbwu.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+name                     : &name "Alex Rojas"
+description              : &description "Alex Rojas' academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+url                      : https://a5rojas.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
@@ -24,21 +24,21 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.jpeg"
-  name             : "Skyler Wu"
+  name             : "Alex Rojas"
   pronouns         : # example: "she/her"  
-  bio              : "Statistics PhD Student at Stanford"
-  location         : "Palo Alto, CA"
-  employer         : "Stanford University"
+  bio              : "Data Science PhD Student at UCSD"
+  location         : "La Jolla, CA"
+  employer         : "UCSD"
   uri              : # URL
-  email            : "skylerw@stanford.edu" 
+  email            : "a5rojas@ucsd.edu" 
 
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=tpguLYkAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=woAyam0AAAAJ&hl=en"
   inspire-hep      : # URL
   impactstory      : # URL
-  orcid            : "https://orcid.org/0000-0003-4311-0421"
+  orcid            : "https://orcid.org/0000-0002-5792-6053"
   semantic         : # URL
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
@@ -48,7 +48,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "skbwu"
+  github           : "rojalex"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -63,7 +63,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "skylerwu" # Username
+  linkedin         : "alexrojas" # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
