--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "alexrojas" # Username
+  linkedin         : "alex-rojas-0591671b7" # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
